test/invalid-syntax/66358_wrong_record_syntax/wrong_record.mag
-- Author: 66358, Gustavo Cardoso

const origin : {x: Int, y: Int} = {x : 0, y : 0}